--- a/projectX/angular.json
+++ b/projectX/angular.json
@@ -3,9 +3,37 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "projectX": {
+    "projectx": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:component": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
+        "@schematics/angular:interceptor": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:resolver": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        },
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +41,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/project-x",
+            "outputPath": "dist/projectx",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,9 +51,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css", "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css"
             ],
-            "scripts": ["./node_modules/bootstrap/dist/jss/bootstrap.min.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -64,10 +93,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "projectX:build:production"
+              "browserTarget": "projectx:build:production"
             },
             "development": {
-              "browserTarget": "projectX:build:development"
+              "browserTarget": "projectx:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -75,7 +104,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "projectX:build"
+            "browserTarget": "projectx:build"
           }
         },
         "test": {
@@ -90,8 +119,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
-              
             ],
             "scripts": []
           }
